Fixed spacing issues on SignUp component

--- a/CAPSTONE/front-end/src/App.css
+++ b/CAPSTONE/front-end/src/App.css
@@ -69,8 +69,11 @@ body {
 
 .err-msg {
   font-family: "Roboto Condensed", sans-serif !important;
+  font-weight: 300;
   text-align: center;
-  color: white;
+  color: red;
+  height: 10px;
+  margin-top: 5px;
 }
 
 .success-msg {
